2010-07-24  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (say_line): eliminate outdated code
	(process_script): use avt_markup

2010-07-23  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_markup): new function
	(avt_put_character, avt_tell, avt_initialize): adapted
	avt_markup was named avt_wikisyntax for a short time

2010-07-21  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (bell): new macro

2010-07-18  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_get_key):
	map some function keys to unicode chars in the reserved area

	* avatar.c (avt_ask):
	support full line editing

	* avatar.c (avt_tell, avt_tell_mb): new functions

2010-07-16  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_ask): fix: no sound on quit-request

2010-06-26  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_flash): restore clipping

	* avatar.c (avt_pager): handle clipping

	* avatar.c (avt_pager): disable alert function

2010-06-22  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c: renamed back from lua/lua-akfavatar.c

	* configure: experimental support for "--host=mingw"
	Makefile.in: adapted

2010-06-21  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-audio.c (avt_initialize_audio, avt_quit_audio):
	make it save to call it repeatedly

	* avatar.c (avt_quit):
	make it save to call it repeatedly

2010-06-18  Andreas K. Foerster  <info@akfoerster.de>

	* filechooser.c: path can be entered manually

2009-12-12  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (is_textfile, is_demo_or_text, is_graphic_file):
	better way to check for extension

2009-12-09  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-akfavatar.c: renamed from lua/lua-avt.c

2009-12-05  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_put_character): ignorable characters

2009-11-24  Andreas K. Foerster  <info@akfoerster.de>

	* colorchooser.c (avta_color_selection): optimized
